# german-doc-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  test.db
.github/workflows/: deploy.yml  tests.yml
docs/: build_log.md
scripts/: evaluate_ragas.py  neon_schema.sql  ragas_results.json
src/: config.py  dependencies.py  logger.py  main.py  ui.py
src/agent/: graph.py  nodes.py  state.py
src/compliance/: audit.py  chat.py  erasure.py
src/db/: chunks.py  models.py  opensearch.py  postgres.py
src/ingestion/: chunker.py  docling_parser.py  embedder.py
src/models/: document.py
src/observability/: langfuse_client.py
src/rag/: circuit_breaker.py  generator.py  rate_limiter.py
src/routers/: ask.py  compliance.py  documents.py  health.py  ingest.py
src/search/: reranker.py  retriever.py
tests/: conftest.py  test_config.py  test_document.py  test_logger.py
tests/agent/: test_graph.py  test_nodes.py
tests/api/: test_ask.py  test_documents.py  test_health.py  test_ingest.py
tests/compliance/: test_audit.py  test_chat.py  test_erasure.py
tests/core/: test_config.py
tests/ingestion/: test_docling_parser.py
tests/models/: test_document.py
tests/observability/: test_langfuse_client.py
tests/rag/: test_circuit_breaker.py  test_generator.py  test_rate_limiter.py
tests/search/: test_reranker.py  test_retriever.py
