[project]
name = "german-doc-ai"
version = "0.1.0"
description = "Production RAG system for German regulatory document intelligence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "boto3>=1.43.11",
    "docling>=2.79.0",
    "fastapi>=0.135.1",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.1.12",
    "langfuse>=4.6.1",
    "langgraph>=1.1.6",
    "openai>=2.29.0",
    "opensearch-py>=3.1.0",
    "pypdf>=3.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "requests-aws4auth>=1.3.2",
    "sqlalchemy>=2.0.48",
    "structlog>=24.0.0",
    "uvicorn>=0.41.0",
    "ragas>=0.4.3",
    "python-multipart>=0.0.29",
    "gradio>=6.15.1",
    "pgvector>=0.4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
